@@ -1,6 +1,6 @@
 AUX rrs-1.70-asneeded.patch 1437 SHA256 46020607ca66963afd1569c7cd2b0ad6c89659f2a33f426b88cd43c3666b23eb SHA512 f72670f986887a04efaec8ba8b4d8a5c725ae21dd25217f67268973487556f757d0e24a4b81bdc573d0dd85bdf0f35c4148b3d553298046696aa4571ab511363 WHIRLPOOL 1aa3922983a4b3c0d81146fa223844527c472a57af836e28bad3dea4d58de4b4f53593d29765a5f6749167f083282ad534855a933fe7bec4506e4a08c138a77e
 DIST rrs-1.70.tar.gz 49579 SHA256 ffd9098cf93da5bda65150fe241ec51eb0eb0e37edca038e6a2216bc12546e85 SHA512 58a3d34bd80f2ddaa62112819d83ab2175daf1b9e66605d0b629a15d1fc6b43b482e1a4a763b99a07d85bbb0fa6df339d0dfcc203e3a3da3d5cfdabbd14a4bfa WHIRLPOOL 1825e41907f018dfbbd6678da39695bf34007cdbbd9b47a86b79f32bac9cbd2ae242d147d2fe568153cf52610daf3d039a49c001fba737d2fd0c080c03f5f074
-EBUILD rrs-1.70-r1.ebuild 818 SHA256 c9d8f8472d63490647ef4083898b4b606a9bae21a0dda36a7fe1c835a2f2a542 SHA512 52c5c321cca37fb76c73ee2d76cf43e759d521661af1c370d4f2929800e04eb8e78dc7305e573b346160512deb17916031af651be230758b160ced2ed1ad7916 WHIRLPOOL fd16f56e04a60e883823407ea04bc706ed028f7dd9fd03ccdb12041e58c88eec8124b049526ef00fc7ac1bc281efca6e3581ed27cbf3dcf49c6a971dad150dae
-EBUILD rrs-1.70.ebuild 860 SHA256 866291ef4bf445613561347d9933aade49b0aa41668033474f979f85c748179f SHA512 1938731732460b22d2ddc2ad85c65d20ec6410990f3b933c44cd8eccd20c8140241b52ade4ec1d80e3db07fe83bc4aa1f727dde7918b074d197992cf49e287ff WHIRLPOOL 2aa74cce68c6d6ae8114f60c7b2bb61f46674de90acc3e47f87d03e95cc98217df86c85a527bdeeba2c148d6454e2be7094a80778081361114c0cc3136a72f41
-MISC ChangeLog 2257 SHA256 e156323777fb72d99b10f8333a75d9ac38102273b47f27c83c4510e10ef9dbc4 SHA512 070e8d0f435502f6cc63d7db5ea7d02961dbed9e6a1a86fdb5c83c7bc584cadfd21ebdab1c0bc6e5fa31f8721deae1633d01018b0bc5634c9daa4ae6fb402cf8 WHIRLPOOL 56bc60b8d37068e89c66347da668efd1941c7959baa5eab616e62986a70bfd34fc81cdebdb6152d2bc21f89dd8fee129f02557e5bfbac4497da46786b8ed8256
+EBUILD rrs-1.70-r1.ebuild 824 SHA256 c9e75e8732c067ef5e0a4fb4368f9e9e13ea22993a6c9cb4b439e89859b816af SHA512 8e73de23c408afb006a88a554525cf6f178f698de600d7025c73f10ea0493b6cda82dfde92e198648d3cbfb5a1171201a6b24311a6489debe2d87b14a39cb9c5 WHIRLPOOL deb453c130b69befe87f0fad7d5c36f1aeb027de085e32b7b9887fccb1a9439d439b930964af54e76aed4f99649a42a447a1364f2a38fad5a3f95816030564a7
+EBUILD rrs-1.70.ebuild 866 SHA256 7efbf6bb4f8d4fd699c96958ac87362997f55b98b2f6cc18a1ebe6a85e43b0f7 SHA512 9c301dd5da02935016b7a4150555727ef7837474d07f8da7209d5b56b50445a6705c12d6988ae3534a99e969dd876cff2b6ff3e983e76da6b7b45354ec8954a9 WHIRLPOOL 2f6649451d133391ee7c97367cfb821ece555f93591c13d5c7eea404b43e331c396d46b9273d9230954e076842748d2fe80209c7679c53eb7190eba73ce65e8d
+MISC ChangeLog 2385 SHA256 3d518256ae4aed7d51603db2c536620a54ef8e74f5e413ac13a8615f68f677e8 SHA512 fb2ed2f60bac7bbcc1874de35a1d5b148bb4c1988e75d1ae6cbdab4d96c0f377f102d625628a2eec0b5232d13cd259183b86cd74b2ff3300fd34bda09c6be100 WHIRLPOOL 07b69a7f4f0ba6254b736e726e28d4f800a36251a9e4b033b38adfbe796654d5b5400323440b5c32b0bb14adf5de0c5027c7f871fa0edc4012326fc253f35c8d
 MISC metadata.xml 269 SHA256 20111fec654c644faf0fa489b1b60bea0cbbbc0088db1eaf2290bb01c4f2abd4 SHA512 b292a3eac1e5ff640cd52675a34cc238f13dd6d475b9a43f735b3a12196586803de1aaf2f362f7e058e05843ca093973503b1d2ad653bebba088b61505aa68cc WHIRLPOOL 539e9a0529d99d5846a85bf0cf1c95cc28bc7ea3d5b9f25fde44a2e58db56b6617223b93f0bf5cc31605c2852c5b079ebe665578d6dbe17b9a6d63f58e98dc56
