@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/rrs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/rrs/ChangeLog,v 1.18 2012/10/11 09:21:54 pinkbyte Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/rrs/ChangeLog,v 1.19 2012/10/11 09:26:19 pinkbyte Exp $
+
+  11 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> rrs-1.70.ebuild,
+  rrs-1.70-r1.ebuild:
+  Replace HOMEPAGE, old one is broken
 
 *rrs-1.70-r1 (11 Oct 2012)
 
